# esp32-tdd-boilerplate

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  sdkconfig
.circleci/: config.yml
components/hal/: HAL.hpp  RTOSTask_HAL.hpp  component.mk
components/hal/hal-esp/: GPIO.cpp  HAL_ESP.cpp  I2C.hpp  Queue.hpp  Semaphore.hpp  pins.h
components/hal/hal-tdd/: HAL_TDD.hpp  Mutex.hpp
main/: component.mk  main.cpp
main/hal/: GPIO_HAL.hpp  HAL.hpp  I2C_HAL.hpp  RTOSMutex_HAL.hpp  RTOSQueue_HAL.hpp  RTOSSemaphore_HAL.hpp  RTOSTypes_HAL.hpp  System.hpp  component.mk
main/hal/hal-esp/: GPIO.hpp  HAL_ESP.cpp  HAL_ESP.hpp  I2C.cpp  LOGS.h  Mutex.hpp  Task.hpp  pins.h
main/hal/hal-tdd/: GPIO.hpp  HAL_TDD.cpp  I2C.hpp  LOGS.h  Queue.hpp  Semaphore.hpp  Task.hpp  pins.h
main/periph/: BME280.cpp  BME280.hpp
main/system/: DebugLED.cpp  DebugLED.hpp
test/: CMakeLists.txt  TestBME280.cpp  TestLEDBlink.cpp
